--- a/react-portals/src/App.css
+++ b/react-portals/src/App.css
@@ -23,6 +23,11 @@
   color: #61dafb;
 }
 
+.content {
+  min-height: 100vh;
+  color: red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
